kubernetes-templates/gics-app-original-image/deployment-gics-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gics-app
  namespace: gics
  labels:
    app: gics-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gics-app
  template:
    metadata:
      labels:
        app: gics-app
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: gics-app
        image: mosaicgreifswald/wildfly:26
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 1111
          allowPrivilegeEscalation: false
        command: ["/bin/sh"]
        args: ["-c", "./run.sh"]
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 2G
          requests:
            cpu: 100m
            memory: 1G
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /entrypoint-wildfly-cli
          name: gics-jboss
        - mountPath: /entrypoint-wildfly-deployments
          name: gics-deployments
        - mountPath: /entrypoint-wildfly-addins
          name: gics-addins
      volumes:
        - name: gics-jboss
          persistentVolumeClaim:
            claimName: gics-jboss
        - name: gics-deployments
          persistentVolumeClaim:
            claimName: gics-deployments
        - name: gics-addins
          persistentVolumeClaim:
            claimName: gics-addins
