kubernetes-templates/gics-app-original-image/ingress-gics-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gics-app-ingress
  namespace: gics
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: <HOST>
    http:
      paths:
      - backend:
          service:
            name: gics-app
            port:
              number: 8080
        path: /
        pathType: Prefix
